--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -15,17 +15,21 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp">
 
-                <Spinner
-                    android:id="@+id/spinnerModel"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/add_button"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawSelectorOnTop="true"
-                    android:entries="@array/model_array"
-                    android:layout_weight="1"/>
+                    android:text="Add"/>
+
+                <Button
+                    android:id="@+id/delete_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Delete"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:drawSelectorOnTop="true"
                     android:layout_weight="1">
                         <TextView
