add restart btn

--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -28,10 +28,10 @@
                     android:text="Det"/>
 
                 <Button
-                    android:id="@+id/toggleNoneButton"
+                    android:id="@+id/exit_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="None"/>
+                    android:text="재시작"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
