--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Device1"
+                    android:text="Device1(BBOX)"
                     android:layout_marginLeft="10dp"
                     android:textSize="25dp"/>
 
@@ -106,7 +106,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Device2"
+                    android:text="Device2(SEG)   "
                     android:layout_marginLeft="10dp"
                     android:textSize="25dp"/>
 
