--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,21 +130,21 @@
                         android:textSize="25dp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/exit"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/exit"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="horizontal">-->
 
-                    <Button
-                        android:id="@+id/exit_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:text="재시작"
-                        app:backgroundTint="#000000" />
-                </LinearLayout>
+<!--                    <Button-->
+<!--                        android:id="@+id/exit_button"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="재시작"-->
+<!--                        app:backgroundTint="#000000" />-->
+<!--                </LinearLayout>-->
             </LinearLayout>
 
             // 스위치 추가
