add third button DET

--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -27,10 +27,10 @@
                     android:text="Det"/>
 
                 <Button
-                    android:id="@+id/exit_button"
+                    android:id="@+id/toggleDet2Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="재시작"/>
+                    android:text="Det"/>
 
                 <Button
                     android:id="@+id/btn_start"
@@ -53,6 +53,7 @@
                             android:layout_height="match_parent"
                             android:text="off"
                             android:layout_marginRight="20dp"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -61,7 +62,20 @@
                             android:id="@+id/device2_state"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="off"/>
+                            android:text="off"
+                            android:layout_marginRight="20dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Device3 :" />
+                        <TextView
+                            android:id="@+id/device3_state"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="off"
+                            android:layout_marginRight="20dp"
+                            />
                 </LinearLayout>
         </LinearLayout>
 
