--- a/app/src/main/res/layout/activity_camera_preview.xml
+++ b/app/src/main/res/layout/activity_camera_preview.xml
@@ -36,7 +36,7 @@
                     android:id="@+id/btn_start"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Start" />
+                    android:text="Send" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
